--- a/DSM1/assets/css/style.css
+++ b/DSM1/assets/css/style.css
@@ -689,6 +689,15 @@ section {
 
     }
 
+.swiper-slide>img{
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: center;
+}
+
+
+
 
 
 /*--------------------------------------------------------------
