--- a/DSM1/assets/css/style.css
+++ b/DSM1/assets/css/style.css
@@ -366,6 +366,7 @@ h6 {
   position: relative;
   overflow: hidden;
   padding: 140px 0 100px 0;
+  height: auto;
 }
 
 #hero::before {
@@ -675,26 +676,40 @@ section {
 # Hero gallery
 --------------------------------------------------------------*/
 .hero-swiper {
-  height: 400px;
-  width: 100%;
+  height: 200px;
+  width: 1200px;
   overflow: hidden;
 }
     .swiper-slide{
-      background: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 60px;
-      color: white;
-
+      text-align: center;
+    font-size: 18px;
+    background: #000;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
     }
 
-.swiper-slide>img{
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  object-position: center;
-}
+    .swiper-slide img {
+      display:block;
+        width: 100%;
+        height: auto;
+        -ms-transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        position: absolute;
+        left: 50%;
+        top: 50%;
+    }
 
 
 
